More styles to section, need to fix problem with after element - overflow, and mobile

--- a/styles.css
+++ b/styles.css
@@ -276,23 +276,56 @@ h2 {
 .opinion{
 	height: 80vh;
 	background-image: url(img/pexels-photo-3688303.jpeg);
-	background-size: cover;
-	background-position: -20% 50%;
+	background-position: 25% 47%;
 }
 .opinion .wrapper{
 	display:flex;
 	flex-direction: column;
-	width:600px;
-	padding:5rem 4rem;
+	width:700px;
+	padding:5rem 0 1rem 8rem;
 	color:var(--color-1);
 }
 .opinion  h2{
 	margin: 0 0 4rem 0;
 	text-align: left;
+	position:relative;
+
+}
+.opinion h2::before{
+	content:'"';
+	font-family:'news cycle';
+	font-size: 40rem;
+	line-height: 0.8;
+	position:absolute;
+	top:0.1rem;
+	opacity:0.5;
 }
 .opinion p{
 font-family: 'roboto',sans-serif;
-font-size: 1.3rem;
+font-size: 1.5rem;
 line-height: 1.6;
 font-weight: 300;
+}
+.opinion p::after{
+	content:"Nick Cave";
+	font-family: 'roboto', sans-serif;
+	font-weight: bold;
+	display:block;
+	font-size: 1.25rem;
+	padding:1rem 0;
+}
+.opinion a{
+	text-transform: capitalize;
+	color:var(--color-1);
+	text-decoration: none;
+	font-size: 1.5rem;
+	font-family: 'roboto',sans-serif;
+	border:2px solid var(--color-1);
+	display:block;
+	position: relative;
+	width:fit-content;
+	font-weight: bold;;
+	padding: 1rem 2rem;
+	
+
 }
